; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_clear_image.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_clear_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.image = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.image*)* @clear_image to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clear_image(%struct.image* %0) #0 {
  %2 = alloca %struct.image*, align 8
  store %struct.image* %0, %struct.image** %2, align 8
  %3 = load %struct.image*, %struct.image** %2, align 8
  %4 = getelementptr inbounds %struct.image, %struct.image* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @free(i32 %5)
  %7 = load %struct.image*, %struct.image** %2, align 8
  %8 = getelementptr inbounds %struct.image, %struct.image* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @free(i32 %9)
  %11 = load %struct.image*, %struct.image** %2, align 8
  %12 = call i32 @memset(%struct.image* %11, i32 0, i32 8)
  ret void
}

declare dso_local i32 @free(i32) #1

declare dso_local i32 @memset(%struct.image*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
